--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,17 @@
         android:minHeight="100dp"
         android:background="@android:color/black">
 
+
+        <ImageButton
+            android:id="@+id/gallery_button"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="30dp"
+            android:background="@drawable/round_button_gray"
+            android:src="@drawable/ic_gallery" />
+
         <ImageButton
             android:id="@+id/camera_capture_button"
             android:layout_width="60dp"
